Terms for derivative works.

--- a/pages/terms.html
+++ b/pages/terms.html
@@ -23,6 +23,10 @@ title: Условия и лицензия
 Оплата возможна банковскими картами, PayPal или биткоинами. Напишите на
 <dmitry@sellme.biz> для получения инструкций.
 
+Производные произведения (например, если вы хотите положить мой пост
+на музыку или сделать из него бесплатную книгу) допускаются, опять же,
+с предварительного согласия автора, но не обязательно за деньги.
+В любой непонятной ситуации пишите письма.
 
 
 Территория
