Add rel=author on name in copyright and link to G+ from About page.
This is needed to enable my name in Google SERP rich snippets.

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,6 +21,10 @@ title: Об авторе
   <a href="https://twitter.com/sellmebiz">sellmebiz</a> (блог)
 </address>
 
+<a rel="me" href="https://plus.google.com/+DmitryChestnykh">
+<img src="//www.google.com/images/icons/ui/gprofile_button-16.png">
+</a>
+
 <!--
 <a href="http://www.flickr.com/photos/zalexandra/8688652726/">
   <img src="http://farm8.staticflickr.com/7055/8688652726_92211c4068.jpg"
