--- a/pages/about.html
+++ b/pages/about.html
@@ -48,9 +48,11 @@ title: Об авторе
 * toodoo: [В 2007 году выйдет мобильный BlogJet](http://blog.toodoo.ru/?p=107) (2006)
 
 
-Техника
+О сайте
 -------
 
-Блог работает на сервере [Apache](http://httpd.apache.org/) в 
-[Debian GNU/Linux](http://debian.org) (хостинг --
-[DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff]). 
+[Исходники сайта](https://github.com/dchest/sellme.biz)
+
+[Условия и лицензия](/terms.html)
+
+Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff].
