Add meta description to the home page.

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,6 +2,7 @@
 layout: blog
 title: Sellme.biz
 seo_title: Sellme.biz - блог о бизнесе и маркетинге своими силами
+description: Блог Дмитрия Честных о бизнесе, маркетинге, продуктивности и технологиях; все своими силами.
 ---
 
 {{range .Site.Posts.Limit 10}}
