Add "As Seen On" section to about. Hehe.

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,8 @@ title: Об авторе
 Меня зовут **Дмитрий Честных**.  Я веду блог [Sellme.biz](http://sellme.biz) и
 пишу программы в [Coding Robots](http://www.codingrobots.com).
 
+<hr>
+
 Контакты
 --------
 
@@ -21,9 +23,9 @@ title: Об авторе
   <a href="https://twitter.com/sellmebiz">sellmebiz</a> (блог)
 </address>
 
-<a rel="me" href="https://plus.google.com/+DmitryChestnykh">
-<img src="//www.google.com/images/icons/ui/gprofile_button-16.png">
-</a>
+<a rel="me" href="https://plus.google.com/+DmitryChestnykh">Google+</a>
+
+<hr>
 
 <!--
 <a href="http://www.flickr.com/photos/zalexandra/8688652726/">
@@ -33,6 +35,41 @@ title: Об авторе
 </a>
 <small><i>Фотограф: [Александра Захарова](http://flickr.com/photos/zalexandra/)</i></small>
 -->
+
+<div class="text-muted text-center" style="margin-bottom: 20px">Про меня и мои проекты говорили:</div>
+
+
+[![New York Times](/img/as-seen-on/nyt.png)]
+(http://artsbeat.blogs.nytimes.com/2010/07/16/getting-the-not-quite-right-stuff-from-i-write-like/)
+&nbsp;&nbsp;&nbsp;
+[![The Guardian](/img/as-seen-on/guardian.png)]
+(http://www.theguardian.com/books/booksblog/2010/jul/15/i-write-like-margaret-atwood)
+&nbsp;&nbsp;&nbsp;
+[![Forbes](/img/as-seen-on/forbes.png)]
+(http://www.forbes.com/sites/andygreenberg/2012/11/14/bug-that-helped-enable-skype-account-takeovers-reported-by-a-user-months-earlier/)
+&nbsp;&nbsp;&nbsp;
+[![NPR](/img/as-seen-on/npr.png)]
+(http://www.npr.org/templates/story/story.php?storyId=128572009)
+&nbsp;&nbsp;&nbsp;
+[![Россия-2](/img/as-seen-on/russia2.png)]
+(http://www.vesti.ru/only_video.html?vid=462727)
+&nbsp;&nbsp;&nbsp;
+[![Associated Press](/img/as-seen-on/ap.png)]
+(http://www.usatoday.com/life/books/news/2010-07-17-i-write-like_N.htm)
+&nbsp;&nbsp;&nbsp;
+[![Los Angeles Times](/img/as-seen-on/latimes.png)]
+(http://latimesblogs.latimes.com/jacketcopy/2010/07/who-do-you-write-like.html)
+&nbsp;&nbsp;&nbsp;
+[![CBS](/img/as-seen-on/cbs.png)]
+(http://www.cbsnews.com/news/do-you-write-like-kurt-vonnegut/)
+&nbsp;&nbsp;&nbsp;
+[![The Huffington Post](/img/as-seen-on/huffpost.png)]
+(http://www.huffingtonpost.com/2010/07/16/i-write-like-sweeps-the-w_n_649339.html)
+&nbsp;&nbsp;&nbsp;
+[![Entertainment Weekly](/img/as-seen-on/entertainment-weekly.png)]
+(http://shelf-life.ew.com/2010/07/14/who-do-you-write-like/)
+
+<hr>
 
 
 Интервью
@@ -47,12 +84,12 @@ title: Об авторе
 * eSEO: [Дмитрий Честных: «Надо смотреть дальше SEO!»](http://eseo.ru/2007/07/23/904.html) (2007)
 * toodoo: [В 2007 году выйдет мобильный BlogJet](http://blog.toodoo.ru/?p=107) (2006)
 
+<hr>
+
 
 О сайте
 -------
 
-[Исходники сайта](https://github.com/dchest/sellme.biz)
-
-[Условия и лицензия](/terms.html)
-
-Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff].
+* [Исходники сайта](https://github.com/dchest/sellme.biz)
+* [Условия и лицензия](/terms.html)
+* Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff].
