--- a/pages/about.html
+++ b/pages/about.html
@@ -92,4 +92,4 @@ title: Об авторе
 
 * [Исходники сайта](https://github.com/dchest/sellme.biz)
 * [Условия и лицензия](/terms.html)
-* Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff].
+* Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff] и [DigitalOcean](https://www.digitalocean.com/?refcode=d513c3a28ff3) [aff].
