--- a/pages/password/index.html
+++ b/pages/password/index.html
@@ -6,10 +6,6 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
   <title>Генератор паролей</title>
-  <link rel="alternate" type="application/rss+xml" title="Sellme.ru RSS Feed" href="/rss/" />
-  <link rel="stylesheet" href="/css/compressed.css?ver=1.3" type="text/css" media=
-  "screen, projection" />
-  <link rel="stylesheet" href="/js/fancybox/fancy.min.css?ver=1.4" type="text/css" />
 </head>
 
 <body>
@@ -97,21 +93,6 @@ print(base64.b64encode(hmac.new("SECRET", "URL", hashlib.sha1).digest()))
       <p>Copyright (<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">cc</a>) 2005-2009
       <a href="/about/">Дмитрий Честных</a> <a class="rss" href="/rss/">RSS</a></p>
     </div>
-  </div><script type="text/javascript" src=
-  "http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js">
-</script><script type="text/javascript">
-//<![CDATA[
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  jQuery.getScript(gaJsHost + "google-analytics.com/ga.js", function(){
-        var pageTracker = _gat._getTracker("UA-71330-2");
-        pageTracker._trackPageview();
-  });
-  //]]>
-  </script><script type="text/javascript" src="/js/fancybox/jquery.fancybox.min.js?ver=1.2">
-</script><script type="text/javascript">
-//<![CDATA[
-  jQuery(document).ready(function(){jQuery("img.thumb").parent().fancybox({"hideOnContentClick":true});jQuery("a.fancybox").fancybox({"hideOnContentClick":true});});
-  //]]>
-  </script>
+  </div>
 </body>
 </html>
