--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,8 @@ title: Об авторе
 Контакты
 --------
 
+<img src="/img/dchest-oct-2015.jpg" alt="Фото автора" width="100" height="100" style="float: left; margin-right: 20px">
+
 <address>
   <strong>Электронная почта</strong><br>
   <a href="mailto:dmitry@sellme.biz">dmitry@sellme.biz</a>
