Make some links https://

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@ markup: markdown
 title: Об авторе
 ---
 
-Меня зовут **Дмитрий Честных**.  Я веду блог [Sellme.biz](http://sellme.biz) и
-пишу программы в [Coding Robots](http://www.codingrobots.com).
+Меня зовут **Дмитрий Честных**.  Я веду блог [Sellme.biz](https://sellme.biz) и
+пишу программы в [Coding Robots](https://www.codingrobots.com).
 
 <hr>
 
