--- a/pages/about.html
+++ b/pages/about.html
@@ -91,6 +91,6 @@ title: Об авторе
 -------
 
 * [Исходники сайта](https://github.com/dchest/sellme.biz)
-* [Условия и лицензия](/terms.html)
+* [Условия](/terms.html)
 * Хостинг &mdash; [DreamHost](http://www.dreamhost.com/r.cgi?224857) [aff].
 * Гарнитура системная и Georgia.
