--- a/pages/terms.html
+++ b/pages/terms.html
@@ -7,26 +7,12 @@ title: Условия и лицензия
 Авторские права
 ---------------
 
-Авторские права на содержимое этого блога, если не указано иное, принадлежат
-Дмитрию Честных. Использование текстов, картинок и дизайна возможно по условиям
-лицензии *Creative Commons «Атрибуция — Некоммерческое использование — Без
-производных произведений», версии 4.0 Всемирная*, доступной по адресу:
-<http://creativecommons.org/licenses/by-nc-nd/4.0/deed.ru>.
+Я передаю произведение в общественное достояние путём отказа от всех своих прав
+на него по всему миру в рамках законодательства об авторских правах,
+включая все связанные и смежные права.
 
-Коммерческое использование любых материалов, права на которые принадлежат
-автору, возможно только с его согласия.
-
-**Стоимость коммерческого использования:**<br>
-&mdash; одной статьи из блога: **$50** (US)<br>
-&mdash; дизайна блога: **$190** (US) за 1 сайт
-
-Оплата возможна банковскими картами, PayPal или биткоинами. Напишите на
-<dmitry@sellme.biz> для получения инструкций.
-
-Производные произведения (например, если вы хотите положить мой пост
-на музыку или сделать из него бесплатную книгу) допускаются, опять же,
-с предварительного согласия автора, но не обязательно за деньги.
-В любой непонятной ситуации пишите письма.
+Вы можете копировать, изменять, распространять и исполнять данное произведение
+в любых целях не спрашивая разрешения.
 
 
 Территория
