Mention my English blog

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,9 @@ title: Об авторе
 ---
 
 Меня зовут **Дмитрий Честных**.  Я веду блог [Sellme.biz](https://sellme.biz) и
-пишу программы в [Coding Robots](https://www.codingrobots.com).
+пишу программы в [Coding Robots](https://www.codingrobots.com). Однажды сделал [I Write Like](https://iwl.me).
+Ещё я автор книги [об аутентификации по паролю для веб и мобильных приложений](https://dchest.com/authbook/).
+Мой блог на английском [on cloud security — dchest.com](https://dchest.com).
 
 <hr>
 
